Full M.A.T.O.E implementation — 14 agents, admin dashboard, Embabel 0.3.5
Backend:
- Upgrade to Embabel Agent Framework 0.3.5 with all LLM starters
- 14 specialist agents (7 rewritten + 7 new): Hotel, B&B, Apartment, Hostel,
  Flight, Car/Bus, Train, Ferry, Attractions, Weather, Currency, Review Summary,
  Country Specialist, Orchestrator
- All agents: browser-first search with LLM fallback, cost tracking, source provenance
- OrchestratorAgent: real LLM synthesis producing 3 ItineraryVariants
  (Budget/Standard/Luxury) with day-by-day breakdowns
- Expanded domain: multi-destination, interest tags, ItineraryDay, ItineraryVariant,
  AttractionOption, origin city, source provenance
- DynamicPromptService: DB-backed prompt versioning with admin rollback
- LlmCostTrackingService: per-session budget ceilings, cost dashboard
- AdminController: REST API for prompts, costs, search targets
- Resilience4j circuit breakers for browser and LLM services
- Flyway migration with itineraries, prompt_versions, llm_cost_log, search_targets
- Docker PostgreSQL Spring profile (application-docker.yml)
- Removed custom annotations, replaced with Embabel imports

Frontend:
- Admin Dashboard: prompt editor, LLM cost monitoring, search target management
- ItineraryCanvas: variant selector, day-by-day timeline, weather/currency,
  attractions, source badges, compare tiers
- MissionControl: origin city, hostel/train/ferry checkboxes, interest tags
- App.js: planner/admin tab navigation, 14 agents in SSE tracker
- nginx reverse proxy for Docker (replaces serve)

Infrastructure:
- Fixed application.yml duplicate travel-agency key
- Fixed Docker: PostgreSQL dialect via Spring profile, removed exposed DB/Redis ports
- Fixed frontend: nginx proxy for /api in production, correct /api prefix in fetch calls
- Tightened CORS configuration

Tests:
- DomainModelTest: Jackson round-trip for all 7 domain records
- LlmServiceTest: model routing, JSON extraction, prefix stripping
- PromptTemplateServiceTest: