@@ -4,19 +4,22 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.matoe.annotations.Action;
 import com.matoe.service.BrowserAgentService;
+import com.matoe.service.DynamicPromptService;
+import com.matoe.service.LlmCostTrackingService;
 import com.matoe.service.LlmService;
 import com.matoe.service.PromptTemplateService;
-import com.matoe.domain.TravelRequest;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
+
+import jakarta.annotation.PostConstruct;
 import java.util.*;
 
 /**
  * Country Specialist Agent — provides regional travel intelligence.
- * Primary: browser-use visits Lonely Planet, Wikivoyage, official tourism sites.
- * Fallback: LLM-generated insights.
+ * Primary: browser-use visits Lonely Planet, Wikivoyage, TripAdvisor.
+ * Fallback: LLM-generated insights with cost tracking.
  */
 @Component
 public class CountrySpecialistAgent {
@@ -27,19 +30,32 @@ public class CountrySpecialistAgent {
     private final LlmService llmService;
     private final ObjectMapper objectMapper;
     private final PromptTemplateService promptTemplateService;
+    private final DynamicPromptService dynamicPromptService;
+    private final LlmCostTrackingService costTracker;
 
     @Value("${travel-agency.prompts.country-specialist}")
-    private String systemPrompt;
+    private String defaultPrompt;
 
     @Value("${travel-agency.models.country-specialist:lmstudio/llama-3-8b}")
     private String defaultModel;
 
+    @Value("${travel-agency.browser.country-sites:lonelyplanet.com,wikivoyage.org,tripadvisor.com}")
+    private String countrySites;
+
     public CountrySpecialistAgent(BrowserAgentService browserService, LlmService llmService,
-                                   ObjectMapper objectMapper, PromptTemplateService promptTemplateService) {
+                                  ObjectMapper objectMapper, PromptTemplateService promptTemplateService,
+                                  DynamicPromptService dynamicPromptService, LlmCostTrackingService costTracker) {
         this.browserService = browserService;
         this.llmService = llmService;
         this.objectMapper = objectMapper;
         this.promptTemplateService = promptTemplateService;
+        this.dynamicPromptService = dynamicPromptService;
+        this.costTracker = costTracker;
+    }
+
+    @PostConstruct
+    void init() {
+        dynamicPromptService.registerDefault("country-specialist", defaultPrompt);
     }
 
     @Action(name = "gather_regional_insights", preconditions = {"destination_provided"}, effects = {"regional_insights_available"})
@@ -52,15 +68,13 @@ public class CountrySpecialistAgent {
                 Map<String, Object> insights = browserService.browseForMap(
                     String.format("Research travel intelligence for %s. " +
                         "Find: best time to visit, local transit tips, cultural customs, " +
-                        "safety advice, local currency, primary language(s), typical weather, local cuisine highlights.",
+                        "safety advice, local currency, primary language(s), typical weather, " +
+                        "local cuisine highlights, visa requirements, emergency contact numbers.",
                         destination),
-                    List.of(
-                        "https://www.lonelyplanet.com",
-                        "https://en.wikivoyage.org",
-                        "https://www.tripadvisor.com"
-                    ),
+                    Arrays.asList(countrySites.split(",")),
                     "JSON object with keys: bestTimeToVisit, localTransitRecommendation, " +
-                    "culturalTips, safetyConsiderations, currency, language, weatherExpectation, localCuisine",
+                    "culturalTips, safetyConsiderations, currency, language, weatherExpectation, " +
+                    "localCuisine, visaRequirements, emergencyNumbers",
                     modelString
                 );
                 if (insights != null && !insights.isEmpty()) {
@@ -74,14 +88,27 @@ public class CountrySpecialistAgent {
 
         // ── fallback: LLM-generated insights ─────────────────────────────────
         try {
-            // Build a temporary TravelRequest-like object for template substitution
+            String systemPrompt = dynamicPromptService.getPrompt("country-specialist");
+            if (systemPrompt.isBlank()) systemPrompt = defaultPrompt;
+
             String userPrompt = "Provide travel intelligence for " + destination + " as a JSON object with keys: " +
                 "bestTimeToVisit, localTransitRecommendation, culturalTips, safetyConsiderations, " +
-                "currency, language, weatherExpectation, localCuisine. Return ONLY valid JSON.";
+                "currency, language, weatherExpectation, localCuisine, visaRequirements, emergencyNumbers. " +
+                "Return ONLY valid JSON.";
+
+            long start = System.currentTimeMillis();
             String raw = llmService.call(modelString, systemPrompt, userPrompt);
+            long durationMs = System.currentTimeMillis() - start;
+
+            costTracker.logCall(null, "country-specialist", modelString,
+                resolveProvider(modelString), estimateTokens(userPrompt), estimateTokens(raw),
+                durationMs, true, null);
+
             return objectMapper.readValue(llmService.extractJson(raw), new TypeReference<>() {});
         } catch (Exception e) {
             log.warn("CountrySpecialist LLM fallback failed for {}: {}", destination, e.getMessage());
+            costTracker.logCall(null, "country-specialist", modelString,
+                "unknown", 0, 0, 0, false, e.getMessage());
             return defaultInsights(destination);
         }
     }
@@ -96,6 +123,19 @@ public class CountrySpecialistAgent {
         d.put("language", "English is widely spoken in tourist areas");
         d.put("weatherExpectation", "Check forecast closer to travel date");
         d.put("localCuisine", "Try local specialties at family-run restaurants");
+        d.put("visaRequirements", "Check visa requirements for your nationality before travel");
+        d.put("emergencyNumbers", "Research local emergency numbers (police, ambulance, fire)");
         return d;
     }
+
+    private String resolveProvider(String model) {
+        if (model == null) return "anthropic";
+        if (model.startsWith("anthropic/")) return "anthropic";
+        if (model.startsWith("lmstudio/")) return "lmstudio";
+        if (model.startsWith("ollama/")) return "ollama";
+        if (model.startsWith("openrouter/")) return "openrouter";
+        return "unknown";
+    }
+
+    private int estimateTokens(String text) { return text != null ? text.length() / 4 : 0; }
 }
